--- a/_posts/2013-01-08-facebook.md
+++ b/_posts/2013-01-08-facebook.md
@@ -1,7 +1,7 @@
 ---
-title: 《打造facebook》读书笔记
+title: 读书笔记：打造facebook
 layout: post
-guid: uFhXLl1hcPRG0271
+guid: uFhXLl1hcPRG027136
 tags:
   - 
 ---
