--- a/_posts/2013-08-25-job.md
+++ b/_posts/2013-08-25-job.md
@@ -12,7 +12,7 @@ tags:
 
 他是个正直义人，为什么遭此不幸，他的朋友认为他肯定做了罪大恶极的事情，上帝是仁慈的，不会惩罚一个好人，也不会放过一个坏人。
 
-约伯确实是个虔诚的好人，他朋友的答案显然不合理。他不停的直质上帝，直到上帝答复他：
+约伯确实是个虔诚的好人，他朋友的答案显然不合理。他不停的质问上帝，直到上帝答复他：
 
 > 约伯记 38 章
 > 
@@ -98,15 +98,11 @@ tags:
 
 无知让人狂妄，即使再狂妄的人处于壮阔的景观中，也会深刻的意识到人类的局限性。茫茫宇宙，人类蜗居在一颗灰尘上，文明的存在于白驹过隙之间。
 
-你能参透原子的结构，可你能参透夸克吗？
-
-你能重构基因，可你能控制遗传分化吗？
-
-你能到达火星，可你能逃离银河系吗？
-
-宇宙为何如此有序，谁是背后的主宰？
-
-人类的进化难道仅是小概率事件？
+* 你能参透原子的结构，可你能参透夸克吗？
+* 你能重构基因，可你能控制遗传分化吗？
+* 你能到达火星，可你能逃离银河系吗？
+* 宇宙为何如此有序，谁是背后的主宰？
+* 人类的进化难道仅是小概率事件？
 
 
 上帝没有正面回答约伯的疑问，而是把答案引到宏大的自然之中，让约伯意识到自己的渺小，自己并不是焦点，命途多舛也无需抱怨。
