my years in dxy

--- a/_posts/2013-01-08-facebook.md
+++ b/_posts/2013-01-08-facebook.md
@@ -3,7 +3,7 @@ title: 读书笔记：打造facebook
 layout: post
 guid: uFhXLl1hcPRG027136
 tags:
-  - 
+  - 读书笔记
 ---
 
 二爷今天给了一本新书，王淮的《打造facebook》。 抽了几个小时读完，本书的重点在管理方面，其中关于员工成长、企业文化培养、招聘等方面见解深刻，值得一读。关于打造产品，书中也有讲解，但我更喜欢DHH的《重构》以及Growth Hacking。
