--- a/_posts/2013-08-25-job.md
+++ b/_posts/2013-08-25-job.md
@@ -4,6 +4,7 @@ layout: post
 guid: 5ooFhMpX3TBb1
 tags:
   - 基督徒
+  - 读书笔记
 ---
 
 乌斯地有一个人名叫约伯。那人完全正直，敬畏神，远离恶事。他生了七个儿子，三个女儿。他的家产有七千羊，三千骆驼，五百对牛，五百母驴，并有许多仆婢。这人在东方人中就为至大。
