--- a/_posts/2012-09-19-respect.md
+++ b/_posts/2012-09-19-respect.md
@@ -8,11 +8,11 @@ tags:
 
 今天偶然看到了一个PM（task of project manage， 任务），讲了一个程序员拒绝需求人员的故事，语气很严厉，后果很悲催。  
 Samqiu评论说，程序员好牛气！  
-有过故事的人才知道痛，经历过这种『牛气』的人才知道这其实是晦气，腐蚀轻松工作氛围。  
+有过故事的人才知道痛，经历过这种「牛气」的人才知道这其实是晦气，腐蚀轻松工作氛围。  
 
-遥想小荣当年，书呆子一个，能力不足，败事有余，开发某产品时也曾碰到过上述情况。程序员牛逼轰轰，动不动就指责我的需求不明确，文档不清楚。一次次过分的指责，让我的心理压力陡升。每每面对程序员都十分痛苦，但是工作还是要继续，只能忍辱负重。那个程序员的牛气换来的是『unforgiven』。
+遥想小荣当年，书呆子一个，能力不足，败事有余，开发某产品时也曾碰到过上述情况。程序员牛逼轰轰，动不动就指责我的需求不明确，文档不清楚。一次次过分的指责，让我的心理压力陡升。每每面对程序员都十分痛苦，但是工作还是要继续，只能忍辱负重。那个程序员的牛气换来的是「unforgiven」。
 
-这种牛气，是以另一个人的尊严为代价，换回产品的零和效应。如果项目组碰到一个嘴很『牛气』的人，项目往往十分倒霉。PM被一次次的驳回，浪费大量撰写文档的时间，需求人员最后懒得写文档。程序员关掉一个个『无聊』的PM后，最后懒得开发。双方成了冤家，持续对抗，最终进度失去控制。
+这种牛气，是以另一个人的尊严为代价，换回产品的零和效应。如果项目组碰到一个嘴很牛气的人，项目往往十分倒霉。PM被一次次的驳回，浪费大量撰写文档的时间，需求人员最后懒得写文档。程序员关掉一个个无聊的PM后，最后懒得开发。双方成了冤家，持续对抗，最终进度失去控制。
 
 想要证明自己的牛气有多种方法。作为程序员，可以给需求人员提更多的建议，可以把逻辑的漏洞补上，可以提出更高效的解决方案，可以去了解用户。作为需求人员，可以把需求摸清楚，文档写详细，把逻辑理顺，可以学习点程序。如果符合这些条件，产品很有可能会牛起来，霸气自然会测漏。
 
