update sql join

--- a/_posts/2013-11-04-sql-join.md
+++ b/_posts/2013-11-04-sql-join.md
@@ -30,7 +30,6 @@ id | price | product_id
 
 <pre><code>
 select products.id, products.product, orders.id, orders.price, orders.product_id
-
 from products
 join orders
 on products.id = orders.product_id
@@ -70,15 +69,12 @@ id | price | product_id
 
 <pre><code>
 select products.id, products.product, orders.id, orders.price, orders.product_id
-
 from products
 left join orders
 on products.id = orders.product_id
 </code></pre>
 
 当执行left join时，结果会是这个样子
-
-
 
 <table>
 <tr>
@@ -87,7 +83,7 @@ on products.id = orders.product_id
 <td>id</td>
 <td>price</td>
 <td>product_id</td>
-<tr>
+</tr>
 
 <tr>
 <td>1</td>
@@ -95,7 +91,7 @@ on products.id = orders.product_id
 <td>1</td>
 <td>180</td>
 <td>1</td>
-<tr>
+</tr>
 
 <tr>
 <td>1</td>
@@ -103,11 +99,11 @@ on products.id = orders.product_id
 <td>1</td>
 <td>200</td>
 <td>1</td>
-<tr>
+</tr>
 
-<table>
+</table>
 
 ## 总结
 
 1. n:n 时，一定要留意笛卡尔积，
-2. left or right join并不能保证虚拟表记录的唯一性。
+2. left or right join 并不能保证虚拟表记录的唯一性。
