Understanding Parameter Naming Conventions

--- a/_posts/2013-11-04-sql-join.md
+++ b/_posts/2013-11-04-sql-join.md
@@ -1,10 +1,25 @@
 ---
-title: join的错误用法
+title: join 的笛卡尔积
 layout: post
 guid: tF7qJbKaR7R91
 tags:
   - 
 ---
+
+## join
+
+这周在统计数据时，误用了left join，我觉得有必要总结一下。
+
+问题的场景是这样的：一条product可能对应多个订单，我想通过left join把右侧的重复订单记录过滤掉，1个商品只显示1个订单信息。但查询结果却和我的预期很不一致。
+
+主表id=1的商品出现两条查询结果。
+
+<pre><code>
+select products.id, products.product, orders.id, orders.price, orders.product_id
+from products
+left join orders
+on products.id = orders.product_id
+</code></pre>
 
 ## products 表
 
@@ -22,88 +37,14 @@ id | price | product_id
  2 | 200 | 1
  3 | 200 | 5
 
-## inner join
-
-当使用join拼装数据时，我们的脑海中会呈现出这种繁忙的景象。
-
-主表中的每一条记录都会去匹配次表的product_id，如果匹配成功，就在虚拟表中生成一条记录。
-
-<pre><code>
-select products.id, products.product, orders.id, orders.price, orders.product_id
-from products
-join orders
-on products.id = orders.product_id
-</code></pre>
-
 products.id | products.product | orders.id | orders.price | orders.product_id
- - | - | - | - | - |
- 1 | 剃须刀  | 1 | 180 |1  
- 1 | 剃须刀 | 2 | 200 | 1
-
-
-## other join
-
-Left join：左侧的表为主表，其数据会全部显示
-Right join：右侧的表为主表，其数据会全部显示
-
-## 笛卡尔积
-
-扯了这么多，以上都不是我这篇文章的重点。
-
-很多人以为使用left join就可把右侧重复的数据过滤掉，其是大错特错。数据结构为1:n，left join 依然会计算笛卡尔积，导致重复记录的问题。
-
-左侧products表
-
-id | product 
- - | -
- 1 | 剃须刀    
- 2 | 皮鞋
-
-右侧orders表
- 
-id | price | product_id 
-- | - | - |
-1 | 180 | 1 
-2 | 200 | 1
-
-
-<pre><code>
-select products.id, products.product, orders.id, orders.price, orders.product_id
-from products
-left join orders
-on products.id = orders.product_id
-</code></pre>
-
-当执行left join时，结果会是这个样子
-
-<table>
-<tr>
-<td>id</td>
-<td>product</td>
-<td>id</td>
-<td>price</td>
-<td>product_id</td>
-</tr>
-
-<tr>
-<td>1</td>
-<td>剃须刀</td>
-<td>1</td>
-<td>180</td>
-<td>1</td>
-</tr>
-
-<tr>
-<td>1</td>
-<td>剃须刀</td>
-<td>1</td>
-<td>200</td>
-<td>1</td>
-</tr>
-
-</table>
+- | - | - | - | - |
+1 | 剃须刀  | 1 | 180 |1  
+1 | 剃须刀 | 2 | 200 | 1
+2 | 皮鞋 |  |  | 
+3 | 旅行箱 |  |  | 
 
 ## 总结
 
-1. n:n 时，一定要留意笛卡尔积，
-2. left or right join 并不能保证虚拟表记录的唯一性。
+1. n:n 时，查询结果的数量等于笛卡尔积
+2. 条件不符时，left（or right） join 决定从哪张表中拿数据，并不能过滤1：n的关系。
