--- a/_posts/2014-02-04-north.md
+++ b/_posts/2014-02-04-north.md
@@ -12,7 +12,7 @@ tags:
 
 5个城市，5段美好时光。
 
-在北方度过的时间最长，亲人朋友也最多。可在南方小住后，我实在回不去了。上海不曾留意渺小的我，可我爱上海。
+在北方度过的时间最长，亲人朋友也最多。可在南方小住后，实在回不去了，我爱南方的城市。
 
 ## 身材矮小也不吃亏
 
