--- a/diary/2014-02-18.md
+++ b/diary/2014-02-18.md
@@ -17,9 +17,13 @@
 # 晚上
 
 
-# 备注
+## 满99/199/299包邮
 
-# 薄荷红绿灯
+> 1. 上海、江苏、浙江、安徽，单笔满99包邮
+> 2. 其他地区满199包邮
+> 3. 新疆、西藏 299元包邮
+
+## 薄荷红绿灯
 
 <table>
   <tr>
@@ -45,7 +49,7 @@
 </table>
 
 
-# 薄荷红绿灯
+## 薄荷红绿灯
 
 
 马黛茶       |              | 绿
@@ -58,7 +62,16 @@
 马黛茶原位南美印第安人世代引用，最后为欧洲移民所欢迎，与足球、探戈、烤肉并列为阿根廷四大国宝，在世界享有「南美仙草」的美誉。马黛茶含有多达11种抗氧化功能的茶多酚，今年在欧洲时尚流行，食肉者和女士尤其喜爱。
 
 
-# 包装信息
+## 食用建议
+
+1. 洗米。根据饭量而定。
+
+2. 蒸饭 用抹布
+
+3. 猪肉发光很可能是猪饲料里面含有添加剂的原因，也有可能是其他方面的原因，建议市民先不要食用。
+
+
+## 包装信息
 
 * 产品名称： 德国贝特斯纤颜马黛茶
 * 配料：马黛茶、胡椒薄荷、柠檬香茅、荨麻、日本煎茶、蒲公英叶、垂枝桦叶
@@ -69,6 +82,10 @@
 * 保质期至：2015年9月4日
 * 注意事项：冲泡后，请放置3-5分钟，使用透明花草茶杯，观赏、引用效果更佳。
 
-# 图文消息
+## 更多图片
 
-balabala
+
+![图文消息](http://mednoter.com/media/files/2014/feb/25-directory.png)
+
+
+![](http://mednoter.com/media/files/2014/feb/25-compile.png)
