--- a/diary/2014-03-05.md
+++ b/diary/2014-03-05.md
@@ -20,9 +20,21 @@
 不符合 Vincent 的要求，需要重构，5555555555。今晚要加班了。
 
 
+2. 采用另外一个方案实现商品的促销方案。新建 Promotion model。goods 与 Promotion 创建关系
+
+    * model goods_promotions_attributes 的属性为空时，不保存（done）
+    * controller
+    * view index/show/_form （done）
+    * api （done）
+    * rake 任务（未完成）
+    * 测试 （done） 
+
+
 ## 晚上
 
+2. 继续上个任务（5h）
 
 
 ## 总结
 
+1. 照顾爸妈，不再有拖累的感觉，满满的爱。
