update rails cache

--- a/_posts/2014-03-22-holed-up.md
+++ b/_posts/2014-03-22-holed-up.md
@@ -10,18 +10,17 @@ tags:
 
 ## 砍掉各种分神的事
 
-1. 在路由器上直接把社交网站的域名屏蔽掉了，手机上把相关的 App 卸掉。
-    * Ruby China
-    * 微博
-    * 微信朋友圈
-    * 知乎
-    * disqus
+1. No Social
+    * ~~Ruby China~~
+    * ~~微博~~
+    * ~~微信朋友圈~~
+    * ~~知乎~~
 
 2. 停止线下聚会。
 
 3. 退订订阅源。
 
-4. ~~我在考虑，要不要把博客的评论也关掉？ ~~（已经去了，再也不用刷 disqus 了）
+4. ~~我在考虑，要不要把博客的评论也关掉？ ~~（已经关闭评论系统）
 
 ## 修行
 
