--- a/_posts/2014-04-13-fuck-off.md
+++ b/_posts/2014-04-13-fuck-off.md
@@ -6,8 +6,8 @@ tags:
    - 
 ---
 
-今天听朋友说了一句关于工作要滚要留的观点：
+经常会有朋友对工作唧唧歪歪，要滚要留犹豫不决。今天偶然听到一句很精辟的话：
 
 > 要么能学到东西，要么拿高薪。如果什么拿不到，抓紧滚蛋，免得浪费彼此的时间。
 
-顿时觉得精辟无比。假若再有同学向我咨询职业规划，我就回复他这句话。
+假若再有小朋友向我咨询职业规划，我就这样回复。
