--- a/_posts/2014-05-18-I-think.md
+++ b/_posts/2014-05-18-I-think.md
@@ -1,7 +1,6 @@
 ---
-title: 我觉得...
+title: 我觉得
 layout: post
-disqus: y
 guid: 04vdmHEKg2k9
 date: 2014-05-18 20:00:00
 tags:
@@ -16,15 +15,15 @@ tags:
 2. (我觉得) 解决 A 问题是当务之急；
 3. (我觉得) Plan B is better。
 
-这是一个十分招摇的口头禅，尤其从菜鸟产品经理的嘴里蹦出来时，几乎会被秒杀。
+这是一个十分招摇的口头禅，尤其从菜鸟产品经理的嘴里蹦出来时。我似乎能感觉到程序员阴森的笑容，以及秒杀的快感。
 
-* 你凭什么觉得？
-* 你资历这么浅，你的直觉值几毛钱？
-* 你觉得 A 不错，我还觉得 B 不错呢？
+你凭什么觉得？
 
-在我的善意提醒下，有个小朋友去掉了这个口头禅，但是悲剧发生了：开会时，他几乎无话可说了。
+你资历这么浅，你的直觉值几毛钱？
 
-因为他陈述观点时需要证据支撑，但是他没有证据，只好闭嘴。
+你觉得 A 不错，我还觉得 B 不错呢？
+
+在我的善意提醒下，有个小朋友去掉了这个口头禅，但是悲剧发生了：开会时，他没有证据来阐释他的观点，只好闭口不言。
 
 ## 陈述观点时，有哪些证据可以让别人更信服？
 
