--- a/_posts/2013-11-09-culture.md
+++ b/_posts/2013-11-09-culture.md
@@ -11,11 +11,13 @@ tags:
 > 
 > 冯大辉，丁香园 CTO，搞互联网的，没有不认识他的。
 
+丁香园是我毕业后的第一份工作，真的十分幸运。在那里遇见了我的好基友，学到了海量的知识，也知道了如何成为一个互联网公司的 leader。本文是我总结的丁香园那些记忆深刻的管理细节。
+
 ## 没有「总」
 
 在丁香园，没有人称呼 CEO 张进为「张总」，也没有人称呼 CTO 大辉为「冯总」。
 
-一些过儿而立之年的老员工也不倚老卖老，相处起来十分融洽。他们喜欢新员工称呼他们： 小燕、小齐、作刚、帅姐、李宁、燕燕、莉莉。你若正儿八经的喊一声「x总」，估计他们会掉一地鸡皮疙瘩。
+一些过儿而立之年的老员工也不倚老卖老，相处起来十分融洽。他们喜欢别人称Ta： 小燕、小齐、作刚、帅姐、李宁、燕燕、莉莉。你若正儿八经的喊一声「x总」，估计他们会掉一地鸡皮疙瘩。
 
 ## Mentor/Mentee 培养制度
 
