--- a/_posts/2013-11-09-culture.md
+++ b/_posts/2013-11-09-culture.md
@@ -11,7 +11,7 @@ tags:
 > 
 > 冯大辉，丁香园 CTO，搞互联网的，没有不认识他的。
 
-丁香园是我毕业后的第一份工作，真的十分幸运。在那里遇见了我的好基友，学到了海量的知识，也知道了如何成为一个互联网公司的 leader。本文是我总结的丁香园那些记忆深刻的管理细节。
+丁香园是我毕业后的第一份工作，真的十分幸运，在那里遇见了我的好基友，学到了海量的知识，也知道了如何成为一个互联网公司的 leader。本文是我总结的丁香园那些记忆深刻的管理细节。
 
 ## 没有「总」
 
@@ -73,12 +73,11 @@ Mentor 在此过程中考察新人的能力。
 
 其实这些管理细节并不是明文规定，而是员工自然衍生出来的。老板眼界高，能力强，又不装逼，自然有一批虎将愿意在丁香园发光发热。
 
-企业文化最终是老板决定的。
+企业文化最终是老板决定的，老板若没有那方面的特质，再强调制度也是徒劳。
 
 一个喜欢开会的 boss ，必定养一批爱开会的中层。（他去强调敏捷时就十分可笑）
 
 一个不尊重员工的 boss，喜欢养一群奴才。（他渴望员工付出时就十分可笑）
 
 一个没有 vision 的 boss ，不太可能领导另外一批 leader。（他展望未来时就十分可笑）
-
 
