--- a/_posts/2013-11-09-culture.md
+++ b/_posts/2013-11-09-culture.md
@@ -17,7 +17,7 @@ tags:
 
 在丁香园，没有人称呼 CEO 张进为「张总」，也没有人称呼 CTO 大辉为「冯总」。
 
-一些过儿而立之年的老员工也不倚老卖老，相处起来十分融洽。他们喜欢别人称Ta： 小燕、小齐、作刚、帅姐、李宁、燕燕、莉莉。你若正儿八经的喊一声「x总」，估计他们会掉一地鸡皮疙瘩。
+一些过儿而立之年的老员工也不倚老卖老，相处起来十分融洽。他们喜欢别人称Ta： 靖姐、冯胖子、小燕、小齐、作刚、帅姐、李宁、燕燕、莉莉。你若正儿八经的喊一声「x总」，估计他们会掉一地鸡皮疙瘩。
 
 ## Mentor/Mentee 培养制度
 
@@ -71,9 +71,7 @@ Mentor 在此过程中考察新人的能力。
 
 # 小结
 
-其实这些管理细节并不是明文规定，而是员工自然衍生出来的。老板眼界高，能力强，又不装逼，自然有一批虎将愿意在丁香园发光发热。
-
-企业文化最终是老板决定的，老板若没有那方面的特质，再强调制度也是徒劳。
+其实这些管理细节并不是明文规定，而是员工自然衍生出来的。老板眼界高，能力强，又不装逼，自然有一批虎将愿意在丁香园发光发热。企业文化最终是老板决定的，老板若没有那方面的特质，再强调制度也是徒劳。
 
 一个喜欢开会的 boss ，必定养一批爱开会的中层。（他去强调敏捷时就十分可笑）
 
