--- a/_posts/2013-11-09-culture.md
+++ b/_posts/2013-11-09-culture.md
@@ -17,7 +17,7 @@ tags:
 
 在丁香园，没有人称呼 CEO 张进为「张总」，也没有人称呼 CTO 大辉为「冯总」。
 
-一些过儿而立之年的老员工也不倚老卖老，相处起来十分融洽。他们喜欢别人称Ta： 靖姐、冯胖子、小燕、小齐、作刚、帅姐、李宁、燕燕、莉莉。你若正儿八经的喊一声「x总」，估计他们会掉一地鸡皮疙瘩。
+一些过儿而立之年的老员工也不倚老卖老，相处起来十分融洽。他们喜欢别人称Ta： 靖姐、飞哥、冯胖子、小燕、小齐、作刚、李宁、燕燕、莉莉、帅姐。你若正儿八经的喊一声「x总」，估计他们会掉一地鸡皮疙瘩。
 
 ## Mentor/Mentee 培养制度
 
