--- a/_posts/2013-11-09-culture.md
+++ b/_posts/2013-11-09-culture.md
@@ -17,7 +17,7 @@ tags:
 
 在丁香园，没有人称呼 CEO 张进为「张总」，也没有人称呼 CTO 大辉为「冯总」。
 
-一些过儿而立之年的老员工也不倚老卖老，相处起来十分融洽。他们喜欢别人称Ta： 靖姐、飞哥、冯胖子、小燕、小齐、作刚、李宁、燕燕、莉莉、帅姐。你若正儿八经的喊一声「x总」，估计他们会掉一地鸡皮疙瘩。
+一些老员工也不倚老卖老，相处起来十分融洽。他们喜欢别人称Ta： 靖姐、飞哥、冯胖子、小燕...，你若正儿八经的喊一声「x总」，估计他们会掉一地鸡皮疙瘩。
 
 ## Mentor/Mentee 培养制度
 
@@ -59,14 +59,11 @@ Mentor 在此过程中考察新人的能力。
 
 ## 人性化的关怀
 
-丁香园里有很多「胶水人物」，比如文磊（文胸）、小燕、建科、大师、李宁。他们会定期邀请自己部门的人到家做客，聚餐，郊游，看电影。
-
-他们自愿充当了 influencer，心理疏导者，关怀者。
-
+丁香园里有很多「胶水人物」，比如文兄、小燕、建科、大师、李宁。他们会定期邀请自己部门的人到家做客，聚餐，郊游，看电影。自愿充当了 influencer，心理疏导者，关怀者。
 
 ## 细致的 HR
 
-耿娟妹子会帮员工跑腿，办档案，开各种证明，办各种卡。员工每天开开心心的工作，无需浪费时间与政府部门打交道。
+耿娟妹子会帮员工跑腿办档案，开各种证明，办各种卡。员工每天开开心心的工作，无需浪费时间与政府部门打交道。
 
 
 # 小结
