--- a/_posts/2014-12-31-my-2014.md
+++ b/_posts/2014-12-31-my-2014.md
@@ -1,5 +1,5 @@
 ---
-title: 我的 2014 
+title: 我的 2014
 layout: post
 guid: MrHPGU2WHrrS
 date: 2014-12-31 18:38:33
@@ -7,10 +7,9 @@ tags:
    -
 ---
 
+## 流水账
 
-# 2014 流水账
-
-## 和神的关系
+### 1. 和神的关系
 
 受洗，成为基督徒。
 
@@ -21,14 +20,19 @@ tags:
 参加了 Equip 课程，装备自己的品格、管理、领导力，为未来的服侍做准备。
 
 
-## 照顾好自己
+### 2. 照顾好自己
 
-1. 每天坚持1小时的锻炼
-2. 健康饮食，不吃油腻
-3. 按时睡觉，不熬夜
+每天坚持1小时的锻炼
 
+健康饮食，不吃油腻
 
-## 家庭
+按时睡觉，不熬夜
+
+用牙线
+
+以上都做到了。
+
+### 3. 家庭
 
 刘小坤怀孕了。
 
@@ -36,7 +40,7 @@ tags:
 
 叔叔大病一场后，开始反思自己的生命中最重要的东西。
 
-## 学到的有趣的技术
+### 4. 学到的有趣的技术
 
 1. 玩熟了各种数据库 MySQL、MongoDB、Redis
 
@@ -61,50 +65,52 @@ tags:
 13. 掌握如何做一个支付系统（支付宝的接口真烂，或者说，奇葩）
 
 
-## 比较满意的工作成果
+### 5. 比较满意的工作成果
 
-1. 我赌我会瘦
+我赌我会瘦
 
-2. 用户注册时的短信通道
-  
-3. 小米推送（Android、iOS）的后端
+用户注册时的短信通道
 
-4. 小米手环合作的一个项目：「19天减肥计划」
+小米推送（Android、iOS）的后端
 
-
-## 读的书
-
-1. Fluent Forever
-2. HTTP 权威指南
-3. 快乐的 Linux 命令行
-4. Ruby 元编程
+小米手环合作的一个项目：「19天减肥计划」
 
 
-## meta-learning
+### 6. 读的书
 
-1. 开始使用间隔记忆工具 Anki
-2. 英语阅读速度大涨
+Fluent Forever
+
+HTTP 权威指南
+
+快乐的 Linux 命令行
+
+Ruby 元编程
 
 
-## 总结
+### 7. meta-learning
+
+开始使用间隔记忆工具 Anki
+
+英语阅读速度大涨
+
+
+### 8. 总结
 
 如果用两句话概括一下自己的2014，那就是：
 
-* 生命成长了很多，少了一些骄傲，多了一些谦卑，多了一些忍耐。
+生命成长了很多，少了一些骄傲，多了一些谦卑，多了一些忍耐。
 
-* 已经成为一个熟练的程序员。
+已经成为一个熟练的程序员。
 
 
 # 2015 展望
 
-0. 在神的带领下，不断陶造品格，向着标杆奔跑。
+1. 在神的带领下，不断陶造品格，向着标杆奔跑。
 
-1. 成为一个好爸爸。
+2. 成为一个好爸爸。
 
-2. 成为一个 Senior Programmer，做更多有趣，有用的事情。
+3. 成为一个 Senior Programmer，做更多有趣，有用的事情。
 
-3. 学好英语口语。
+4. 学好英语口语。
 
-4. 透彻的理解一个 HTTP 请求从发起，到响应的整个过程。
-
-
+5. 透彻的理解一个 HTTP 请求从发起，到响应的整个过程。
