--- a/_posts/2015-02-20-todo-list.md
+++ b/_posts/2015-02-20-todo-list.md
@@ -7,7 +7,7 @@ tags:
    -
 ---
 
-Today I read Paul Graham’s * [the top of my todo list](http://www.paulgraham.com/todo.html) *, and delighted to write my own top of todo list.
+Today I read Paul Graham’s [The top of my todo list](http://www.paulgraham.com/todo.html), and delighted to write my own top of todo list.
 
 Some young spends his whole life on chasing money, success. Bruce give me a schedule, try to guide me to avoid making mistakes. It’s very useful.
 
