--- a/_posts/2015-02-20-todo-list.md
+++ b/_posts/2015-02-20-todo-list.md
@@ -7,11 +7,11 @@ tags:
    -
 ---
 
-Today I read Paul Graham’s [The top of my todo list](http://www.paulgraham.com/todo.html), and delighted to write my own top of todo list.
+Today I read Paul Graham’s [The top of my todo list](http://www.paulgraham.com/todo.html), and was delighted to write my own top of todo list.
 
-Some young spends his whole life on chasing money, success. Bruce give me a schedule, try to guide me to avoid making mistakes. It’s very useful.
+So many people spends their whole life on chasing money, success. Bruce give me a schedule, try to guide me to avoid making mistakes. It’s very useful.
 
-I optimized it, the following is my top of todo list in every day life.
+The following is my top of todo list in every day life.
 
 # God
 
