--- a/_posts/2015-08-05-rc-file.md
+++ b/_posts/2015-08-05-rc-file.md
@@ -282,4 +282,6 @@ set keymap vi
 ```
 
 
+I am working at SAP Jam Team. We are hiring [Senior Ruby developer](https://ruby-china.org/topics/26325).
+
 --eof
