Replace with relative URL

--- a/_posts/2015-08-05-rc-file.md
+++ b/_posts/2015-08-05-rc-file.md
@@ -87,7 +87,7 @@ Debug 中经常会碰到 3+ 层混排的数据结构，比如 ActionController::
 
 终端默认打印出来的排版非常不友好，每次都把自己的钛合金狗眼看瞎。
 
-![Without awesome print](http://mednoter.com/media/files/2015-08-05-irb-default.jpg)
+![Without awesome print](/media/files/2015-08-05-irb-default.jpg)
 
 如果你喜欢 awesome_print 这个 gem，可以在 ~/.irbrc 中加上这两行代码，从此世界变得美好起来。
 
@@ -100,7 +100,7 @@ AwesomePrint.irb!
 
 以后打开 irb/console 时，AwesomePrint 会帮你做排版， 查看 ActiveRecord 对象和多层嵌套的数据结构时都变得特别直观。
 
-![Awesome print](http://mednoter.com/media/files/2015-08-05-awesome-2.jpg)
+![Awesome print](/media/files/2015-08-05-awesome-2.jpg)
 
 
 ## 3. ~/.gemrc
