--- a/_posts/2015-12-28-study-plan-2016.md
+++ b/_posts/2015-12-28-study-plan-2016.md
@@ -66,4 +66,4 @@ tags:
     * [Paul Graham: Writing, Briefly](http://www.paulgraham.com/writing44.html)   
     * [Paul Graham: Writing and speaking](http://paulgraham.com/speak.html)    
   
-3. [2013-2015 Study Plan](http://localhost:4000/study-plan.html)
+3. [2013-2015 Study Plan](/study-plan.html)
