Add Divine Plan

--- a/_posts/2015-12-28-study-plan-2016.md
+++ b/_posts/2015-12-28-study-plan-2016.md
@@ -13,9 +13,7 @@ tags:
 
 每掌握一个新的技能，看问题的视角就发生了翻天覆地的变化，从而变成另外一个自己。永远不知道下一步是什么，但只要抱着一颗好奇心，快乐就源源不断。
 
-经历了2016，或许我会爱上写作，成为一个作家呢？
-
-还有几天就2016年就翻开了，我的新年计划如下。[1]
+经历了2016，或许我会爱上写作并成为一个作家呢。我的新年计划如下：[1]
 
 ## 1. 认认真真的学习写作
 
@@ -42,12 +40,32 @@ tags:
 
 随着学习的深入，C 的短板让我格外痛苦。不知道内存溢出的具体过程；看不懂 Ruby instance variable 哈希表中的大量指针；看不懂 Ruby 垃圾回收的实现方式；看不懂 *Ruby Under Microscrope* 中的代码片段；看不懂 MySQL 的索引数据结构；看不懂 Memcached page 分配给 Slab class 的代码。为了弥补这个缺陷，我只能拼命阅读更多图文并茂的技术文章，但终究像隔着一层窗户纸去理解黑盒子里面的世界。
 
-只有走过弯路，才知道正途的美好。这种痛苦也是一笔宝贵的财富，它让我主动去学习 C Programming。这效果比一个老程序员在耳朵边上整天叨叨「你要学习 C 才能成为一个真正的程序员」好的多。
+只有走过弯路，才知道正途的美好。这种痛苦也是一笔宝贵的财富，它让我主动去学习 C Programming。这效果比一个高级程序员整天在耳朵边上叨叨「你要学习 C 才能成为一个真正的程序员」好的多。
 
-## 3. 神学方面的计划还没想好，
+## 3. 神学方面的计划
 
-走一步算一步吧，神的计划盖过人的计划，多想无益。 #TODO
+我向往属灵的生活，但「计划更加属灵」是很蠢的命题。
 
+因为神的智慧高过人的智慧，我们永远不知道下一刻会变成什么，只有神知道。其次，这似乎抢夺了神主权。
+
+思考良久，并与长者讨论后，计划还是设定了，神应该喜悦我想亲近他的主观意志。
+
+1. 继续学习课程 [*Equip*](http://www.iequip.org/)
+2. 继续学习课程 [*不再一样*](http://book.douban.com/subject/1859392/)
+
+这似乎还是没有意义。每周六下午的《Equip》已经进行了1年有余，《不再一样》则是小组今年设定的主题查经资料。如果生活轨道不出意外，惯性会推着我完成。
+
+为什么还要如此郑重其事？
+
+因为我想对神说：
+
+无论 Bruce 讲课状态的好坏，学习小组人少人多，都不会影响到我学习 Equip，我想更多的看到人性中隐而未现的肮脏和龌龊，我想摆脱一个个偶像的枷锁，我想把一生花费在恒久价值事情上。
+
+无论查经小组复兴或低迷，小组成员预习与否，是否带领查经，都不再影响到我认认真真的学习《不再一样》。
+
+所以，以后周六上午不再慌慌张张的预习功课，因为预习和复习成将为每天的功课。以后不再因带领而格外努力的准备，因为努力的阅读和反思成为常态。
+
+我的神学计划就是 「Attitude」。
 
 ## 4. 其他 (optional)
 
