修改错别字

--- a/_posts/2016-03-29-FAQ.md
+++ b/_posts/2016-03-29-FAQ.md
@@ -103,7 +103,7 @@ tags:
 
 灯塔教会已经受洗的弟兄姐妹，可以免费领取自己的 VPN 帐号，请发送邮件给 xiaorong.ruby@gmail.com。
 
-慕道友流失率太高，无人背书，赞不考虑。
+慕道友流失率太高，无人背书，暂不考虑。
 
 ## 2.5 如何翻墙？
 
@@ -112,11 +112,8 @@ tags:
 ## 2.6 如何配置 PPTP？
 
 - [Android 手机教程](http://note.youdao.com/share/?id=32bd54dd00a9af5a4aa7451126fdd364&type=note)
-
 - [iPhone、iPad 教程](http://note.youdao.com/share/?id=b25f62b567298b9a3e3d48567e333a05&type=note)
-
 - [Windows 教程](http://note.youdao.com/share/?id=bcbc1aea4d2b0a9abee992b955d042f9&type=note)
-
 - [Mac 教程](https://www.astrill.com/knowledge-base/69/PPTP---How-to-configure-PPTP-with-built-in-client-on-Mac-OS-X.html)
 
 
