--- a/_posts/2016-03-29-FAQ.md
+++ b/_posts/2016-03-29-FAQ.md
@@ -10,13 +10,13 @@ tags:
 
 ## 1.1 不要问「吕小荣，在吗?」
 
-我三天才处理一次即时通讯工具的留言，你最好一次性把问题交代清楚。
+我三天才处理一次即时通讯工具的留言，你最好把问题一次交代清楚。
 
 [http://mednoter.com/busy.html](http://mednoter.com/busy.html)
 
 ## 1.2 直奔主题，节省时间
 
-我是个程序员，情商也低。有事说事即可，我会尽量帮忙。节约时间就是对我最大的尊重。
+我是个程序员，情商也低。有事说事即可，我会尽量帮忙。节约时间是对我最大的尊重。
 
 > 2015-05-11 21:55:43  
 > 某某：吕小荣，最近过得怎么样？好久没联系了。  
@@ -48,44 +48,44 @@ tags:
 糟糕的提问者
 
 > 2015-05-11 21:55:43    
-> 某某：在？  
+> A君：在？  
 > 2015-05-12 07:00:00  
 > 吕小荣：恩，什么事？  
 > 2015-05-12 12:10:00  
-> 某某：问你个事？  
+> A君：问你个事？  
 > 2015-05-12 12:10:30  
-> 某某：哪家医院治疗糖尿病最好？…（非常缓慢的打字）  
+> A君：哪家医院治疗糖尿病最好？…（非常缓慢的打字）  
 > 2015-05-12 12:10:50  
 > 吕小荣：上海地区吗？  
 > 2015-05-12 12:13:00  
-> 某某：…（继续非常缓慢的打字）  
+> A君：…（继续非常缓慢的打字）  
 > 2015-05-12 12:14:50  
 > 吕小荣：六院或瑞金  
 
 聪明的提问者
 
 > 2015-05-11 21:55:43  
-> A 君： Hi 小荣，我的叔叔 54 岁，刚刚检查出得了糖尿病，暂没有发现并发症，这是初筛  的检查资料。你帮忙看一下。顺便问一下，上海哪个医院治疗糖尿病最好？ 
+> C君：小荣，我的叔叔 54 岁，刚刚检查出糖尿病，暂没有发现并发症，这是初筛  的检查资料，你帮忙看一下，给些建议。顺便问一下，上海哪个医院治疗糖尿病最好？ 
 > 
 > 2015-05-11 21:55:50  
 > 吕小荣：六院或瑞金。尤其是六院，经常会组织糖尿病科普讲座，你可以留意一下。  
 
 
-即使你遵守所以的礼仪，我也并不保证回复，因为我的儿子真是太可爱了。
+即使你遵守所有的礼仪，我也不保证回复，因为我的儿子真是太可爱了。
 
 
 # 二 FAQ
 
-## 2.1 可以详细的一步步指导我吗？
+## 2.1 可以一步步指导我吗？
 
-我不提供图文并茂的解决方案。请根据我给出的提示去解决问题，自己动手，丰衣足食。
+自己动手，丰衣足食，根据我的提示去解决问题，我不提供图文并茂的解决方案。
 
 ## 2.2 如何职业转型？
 
 - [Paul Graham: How to do what you love?](http://www.paulgraham.com/love.html) 
 - [埃米尼亚.伊瓦拉：如何转变职业生涯？](http://www.yangzhiping.com/psy/Working-Identity.html)
 
-读完以上两篇文章，写一篇千字文梳理现状、规划、疑惑，再和我聊。
+读完以上文章，写一篇千字文梳理现状、规划、疑惑，再找我聊。
 
 > 目的  
 > 1. 这两篇文章是经典之作；  
@@ -93,59 +93,63 @@ tags:
 
 ## 2.3 如何学习编程？
 
-学完 CodeSchool 或 Codecademy 的任意一节课程后，再来找我聊。
+学完 CodeSchool 或 Codecademy 的任意一节课程后，再找我聊。
 
 > 目的  
-> 1. 这是两个最好的编程网站；  
+> 1. 这是两个最好的编程学习网站；  
 > 2. 判断你是否靠谱。
 
-## 2.4 如何翻墙 (灯塔教会版)？
+
+## 2.4 如何提高执行力和自制力？
+
+1. SMART 原则
+2. 《成功，动机与目标》
+
+读完以上经典之作，写一篇千字文梳理现状、规划、疑惑，再找我聊。
+
+> 目的  
+> 1. 必读经典之作；  
+> 2. 判断你是否靠谱。
+
+
+## 2.5 如何翻墙(灯塔教会版)？
 
 灯塔教会已经受洗的弟兄姐妹，可以免费领取自己的 VPN 帐号，请发送邮件给 xiaorong.ruby@gmail.com。
 
 慕道友流失率太高，无人背书，暂不考虑。
 
-## 2.5 如何翻墙？
+## 2.6 如何翻墙？
 
-推荐购买「云梯」，具体教程请 Google it.
+推荐购买「云梯」，具体请看 [Kgen](https://ruby-china.org/kgen) 的个人介绍。
 
-## 2.6 如何配置 PPTP？
+## 2.7 如何配置 PPTP？
 
 - [Android 手机教程](http://note.youdao.com/share/?id=32bd54dd00a9af5a4aa7451126fdd364&type=note)
 - [iPhone、iPad 教程](http://note.youdao.com/share/?id=b25f62b567298b9a3e3d48567e333a05&type=note)
 - [Windows 教程](http://note.youdao.com/share/?id=bcbc1aea4d2b0a9abee992b955d042f9&type=note)
 - [Mac 教程](https://www.astrill.com/knowledge-base/69/PPTP---How-to-configure-PPTP-with-built-in-client-on-Mac-OS-X.html)
 
-
-## 2.7 如何提高执行力和自制力？
-
-1. SMART Goal
-2. 《成功，动机与目标》
-
-读完以上经典之作，写一篇千字文梳理现状、疑惑，然后再和我聊。
-
-> 目的  
-> 1. 必读经典之作；  
-> 2. 判断你是否靠谱。
-
 ## 2.8 Windows 电脑出问题了，可以帮我修修吗？
 
 非 Windows 用户，爱莫能助。
 
-## 2.9 PPT/Word/杀毒软件/浏览器/QQ/微信/Keynote/其他应用 出问题了，可以帮我修修吗？
+## 2.9 PPT/Word/杀毒软件/浏览器/QQ/微信出问题了，可以帮我修修吗？
 
 Please Google(baidu) it.
 
-## 2.10 得了某种疾病，上海哪家医院最强？
+## 2.10 老婆/父母/亲戚/朋友得了某种疾病，上海哪家医院强？
 
 上海的三级医院治疗普通疾病都很不错，比如瑞金、中山、华山、长海、长征、六院、九院等。
 
-## 2.11 老婆/父母/亲戚/朋友 得了某种疾病，该怎么办？
+## 2.11 老婆/父母/亲戚/朋友得了某种疾病，该怎么办？
 
 [https://jinshuju.net/f/KZzXKX](https://jinshuju.net/f/KZzXKX)
 
 填完这个问诊表格后，再联系我，我会转发给认识的医生朋友。
 
-## 2.12 老婆/父母/亲戚/朋友 得了某种疾病，能帮我搞到医院的床位吗？
+## 2.12 老婆/父母/亲戚/朋友得了某种疾病，能帮我搞到医院的床位吗？
 
 我也搞不到，真的不骗你。不如认认真真的去登记，排队。
+
+
+未完待续。
