--- a/_posts/2016-03-29-FAQ.md
+++ b/_posts/2016-03-29-FAQ.md
@@ -111,6 +111,7 @@ tags:
 > 1. 必读经典之作；  
 > 2. 判断你是否靠谱。
 
+<a name='l2tp'></a>
 
 ## 2.5 如何翻墙(灯塔教会版)？
 
@@ -118,16 +119,17 @@ tags:
 
 慕道友流失率太高，无人背书，暂不考虑。
 
-## 2.6 如何翻墙？
 
-推荐购买「云梯」，具体请看 [Kgen](https://ruby-china.org/kgen) 的个人介绍。
+## 2.7 灯塔教会如何配置 L2TP 翻墙?
 
-## 2.7 如何配置 PPTP？
+- [iPhone、iPad 教程](http://note.youdao.com/yws/public/redirect/share?id=3b2b732c0471df95de0aed012eb272dc&type=false)
+- [Windows Phone 手机教程](http://www.jianshu.com/p/5f934296e097)
+- [Android 手机教程](http://note.youdao.com/yws/public/redirect/share?id=db68fec91db45072c55f109694e84501&type=false)
+- [Windows 10 设置教程](http://www.jianshu.com/p/bff80aff2e29)
+- [Mac 教程](http://note.youdao.com/yws/public/redirect/share?id=1b4fc47d5ea4ed6714fb6e162c3cc243&type=false)
 
-- [Android 手机教程](http://note.youdao.com/share/?id=32bd54dd00a9af5a4aa7451126fdd364&type=note)
-- [iPhone、iPad 教程](http://note.youdao.com/share/?id=b25f62b567298b9a3e3d48567e333a05&type=note)
-- [Windows 教程](http://note.youdao.com/share/?id=bcbc1aea4d2b0a9abee992b955d042f9&type=note)
-- [Mac 教程](https://www.astrill.com/knowledge-base/69/PPTP---How-to-configure-PPTP-with-built-in-client-on-Mac-OS-X.html)
+遇到'技术'问题, 请Google自行解决, 不提供售后.
+
 
 ## 2.8 Windows 电脑出问题了，可以帮我修修吗？
 
