更新2016年学习目标

--- a/_posts/2015-12-28-study-plan-2016.md
+++ b/_posts/2015-12-28-study-plan-2016.md
@@ -17,6 +17,8 @@ tags:
 
 ## 1. 认认真真的学习写作
 
+<span style="color:brown">(totally failed)</span>
+
 **原因有这几个**
 
 * 提高写作效率。有太多的话要说，但是写作成本很高，简单的文章也要花费我几个小时。
@@ -38,11 +40,15 @@ tags:
 
 ## 2. 学习 C Programming
 
+<span style="color:brown">(20% completed)</span>
+
 随着学习的深入，C 的短板让我格外痛苦。不知道内存溢出的具体过程；看不懂 Ruby instance variable 哈希表中的大量指针；看不懂 Ruby 垃圾回收的实现方式；看不懂 *Ruby Under Microscrope* 中的代码片段；看不懂 MySQL 的索引数据结构；看不懂 Memcached page 分配给 Slab class 的代码。为了弥补这个缺陷，我只能拼命阅读更多图文并茂的技术文章，但终究像隔着一层窗户纸去理解黑盒子里面的世界。
 
 只有走过弯路，才知道正途的美好。这种痛苦也是一笔宝贵的财富，它让我主动去学习 C Programming。这效果比一个高级程序员整天在耳朵边上叨叨「你要学习 C 才能成为一个真正的程序员」好的多。
 
 ## 3. 神学方面的计划
+
+<span style="color:green">(100% completed)</span>
 
 我向往属灵的生活，但「计划更加属灵」是很蠢的命题。
 
@@ -69,11 +75,11 @@ tags:
 
 ## 4. 其他 (optional)
 
-1. Book: Ruby Under Microscope
-2. Book: High Performance MySQL
-3. Book: Minitest Cookbook
-4. Source Code: Newrelic oneAPM gem
-5. Source Code: Minitest
+1. Book: Ruby Under Microscope      <span style="color:brown">(30% completed)</span>
+2. Book: High Performance MySQL     <span style="color:green">(100% completed) </span>
+3. Book: Minitest Cookbook          <span style="color:green">(100% completed) </span>
+4. Source Code: Newrelic oneAPM gem <span style="color:red">(failed) </span>
+5. Source Code: Minitest            <span style="color:red">(failed) </span>
 
 ## Reference
 
