周日增加 purpose from god

--- a/_posts/2016-11-22-plan-for-2017.md
+++ b/_posts/2016-11-22-plan-for-2017.md
@@ -1,5 +1,5 @@
 ---
-title: 2017 Plan
+title: "安息，我的2017"
 layout: post
 guid: PdIwc8vdosDvCfRG
 date: 2016-11-22 10:03:26
@@ -10,17 +10,67 @@ tags:
 这是 life plan, 不再是 study plan.
 
 
+# 个人
+
 ## 1. 神希望我今年干什么呢？
 
+不断操练在耶稣那里获得安全感，而不是知识和成就。
 
-## 2. 找到自己的节奏
-
-运动与运动之间该如何交替训练。比如说游泳与跑步，散步，拉伸之间按照什么节奏来是比较适合身体的？
-
-伏案走动之间该如何交替。以前只注重学习内容之间的平衡，从未考虑身体是有限的资源。
+学习安息，学习休息。
 
 
-## 3. 开始写第一本书《暗记》，并完成以下章节
+## 2. 更了解自己身体
+
+储备康复医学的知识，而不是每每受伤之后，再去弥补。要搞懂几个问题有：
+
+1. 久坐、跑步容易损伤哪些肌肉和韧带? 
+
+2. 这些肌肉和韧带的解剖结构，起点、终点、疼痛特点
+
+3. 如何有效拉伸？把《精准拉伸》读完。
+
+4. 还要学会如何交替训练？比如说游泳与跑步，散步，拉伸之间按照什么节奏来是比较适合身体的？
+
+
+
+## 学会安息
+
+我喜欢我的工作，且工作就是生活，生活就是工作，我从未把他们分开过。这半年身体急转直下，先是颈椎痛，其次是背部的筋膜炎，疼痛的让我呕吐。我才意识到健康也是的资源，是有限的。我想休息，又不会休息。不工作时我该干什么呢？有益处且不是虚度。
+
+要满足以下几个条件真是太难了：花时间、不浪费、有所成长、神所喜悦、身体放松、不再伏案。
+
+
+
+在家时克制工作和学习的冲动
+
+- 不看邮件。
+
+- 不躺在床上看手机，含仰卧和俯卧。
+
+- 主手机只保留
+
+
+工作
+
+- 每工作一小时，要休息15分钟。
+
+- 休息时的背部筋膜放松必不可少
+
+- 每晚 22:30 睡觉，不熬夜
+
+当下我能做到的是——勒令自己不工作，希望在未来的一年，能找到自己的安息的方式。
+
+
+一些候选包括
+
+等儿子长大一点，晚上回家和他踢足球，玩台球，练琴，皮划艇
+
+和刘小坤一起散步，如果她愿意的话。
+
+
+
+
+## 3. 开始写第一本书《暗记》，并完成以下章节的书稿
 
 3.1 主动学习与被动学习
 
@@ -30,7 +80,7 @@ tags:
 
 - be slack，总是爱偷懒
 - 爱形象和具体，不爱抽象
-- 等等
+- ...
 
 3.4 Anki 软件的特点
 
@@ -46,6 +96,7 @@ tags:
 
 如何练习演讲？
 
+...
 
 ## 4. 读书
 
@@ -56,10 +107,36 @@ tags:
 - *High Performance MySQL*, reread it and practice on Jam Production Environment
 
 
-How to measure?
+如何量化结果？
 
 1. 只要完成任意一本，该项就算 100% 完成
-2. 每本书的完成度相加，超过 100% 算作完成
+2. 每本书的完成度相加，超过 100% 也算完成
+
+
+# 家庭
+
+她想买一套房子，所以我要开始打理家里的财务，并且学习房产知识。
+
+
+# 职场
+
+德鲁克管理大师，也是基督徒。重读《管理自己》，再一次回答德鲁克的这些问题。
+
+- 我的长处是什么？
+
+- 我的工作方式是怎样的？
+
+- 我如何学习？
+
+- 我的价值观是什么？
+
+- 我属于何处
+
+- 我该做出什么贡献？
+
+
+
+# 教会
 
 
 
