--- a/_posts/2016-11-22-plan-for-2017.md
+++ b/_posts/2016-11-22-plan-for-2017.md
@@ -1,5 +1,5 @@
 ---
-title: "安息，我的2017"
+title: "安息，2017"
 layout: post
 guid: PdIwc8vdosDvCfRG
 date: 2016-11-22 10:03:26
@@ -60,6 +60,10 @@ tags:
 
 当下我能做到的是——勒令自己不工作，希望在未来的一年，能找到自己的安息的方式。
 
+
+- 地铁上不看手机，只是默想。
+
+- 走路不要低头，抬头挺胸。
 
 一些候选包括
 
@@ -132,7 +136,7 @@ tags:
 
 - 我属于何处
 
-- 我该做出什么贡献？
+- 我该做出什么贡献？(营造良好的技术氛围)
 
 
 
