回答德鲁克的问题

--- a/_posts/2016-11-22-plan-for-2017.md
+++ b/_posts/2016-11-22-plan-for-2017.md
@@ -21,7 +21,7 @@ tags:
 
 ## 2. 更了解自己身体
 
-储备康复医学的知识，而不是每每受伤之后，再去弥补。要搞懂几个问题有：
+储备康复医学的知识，而不是每每受伤之后，再去弥补。要搞懂几个问题：
 
 1. 久坐、跑步容易损伤哪些肌肉和韧带? 
 
@@ -35,11 +35,9 @@ tags:
 
 ## 学会安息
 
-我喜欢我的工作，且工作就是生活，生活就是工作，我从未把他们分开过。这半年身体急转直下，先是颈椎痛，其次是背部的筋膜炎，疼痛的让我呕吐。我才意识到健康也是的资源，是有限的。我想休息，又不会休息。不工作时我该干什么呢？有益处且不是虚度。
+工作就是生活，生活就是工作。我喜欢工作，从未把他们分开过。这半年身体急转直下，先是颈椎痛，其次是背部的筋膜炎，疼痛的让我呕吐。这才意识到健康也是有限资源。我想休息，又不会休息。
 
-要满足以下几个条件真是太难了：花时间、不浪费、有所成长、神所喜悦、身体放松、不再伏案。
-
-
+不工作时该干什么呢？要满足以下几个条件真是太难了：花时间、不浪费、有所成长、神所喜悦、身体放松、不再伏案。
 
 在家时克制工作和学习的冲动
 
@@ -58,20 +56,17 @@ tags:
 
 - 每晚 22:30 睡觉，不熬夜
 
-当下我能做到的是——勒令自己不工作，希望在未来的一年，能找到自己的安息的方式。
-
+其他
 
 - 地铁上不看手机，只是默想。
 
 - 走路不要低头，抬头挺胸。
 
-一些候选包括
+- 等儿子长大一点，晚上回家和他踢足球，玩台球，练琴，皮划艇
 
-等儿子长大一点，晚上回家和他踢足球，玩台球，练琴，皮划艇
+- 和刘小坤一起散步，如果她愿意的话。
 
-和刘小坤一起散步，如果她愿意的话。
-
-
+希望在未来的一年，能找到自己的安息的方式。
 
 
 ## 3. 开始写第一本书《暗记》，并完成以下章节的书稿
@@ -117,27 +112,61 @@ tags:
 2. 每本书的完成度相加，超过 100% 也算完成
 
 
-# 家庭
+# 5. 家庭
 
-她想买一套房子，所以我要开始打理家里的财务，并且学习房产知识。
+1. 想买一套房子，所以我要开始打理家里的财务，并且学习房产知识。
+
+2. 如何教育小沐沐？晚上一起看巧虎动画片，教他唱里面的儿歌和跳舞。
 
 
-# 职场
+# 6. 职场
 
-德鲁克管理大师，也是基督徒。重读《管理自己》，再一次回答德鲁克的这些问题。
+德鲁克是管理大师，也是基督徒。重读他的《管理自己》，再一次回答德鲁克的这些问题。
 
-- 我的长处是什么？
+## 6.1 我的长处是什么？
 
-- 我的工作方式是怎样的？
+## 6.2 我的工作方式是怎样的？
 
-- 我如何学习？
+- 独狼，不喜欢合作。（但喜欢和大师合作，做他们的小跟班）。
 
-- 我的价值观是什么？
+- 喜欢大段的工作时间，极其讨厌被人打断。
 
-- 我属于何处
+- 厌恶管理。对人冷漠，不太关心这些事情。谁生病了？谁请假了？谁心情不好了？谁对未来迷茫了？谁需要沟通了？
 
-- 我该做出什么贡献？(营造良好的技术氛围)
 
+## 6.3 我如何学习？
+
+## 6.4 我的价值观是什么？
+
+- 不为钱做事情。
+- 不做昙花一现的东西。
+- 不跟随那些为钱做事情的领导。
+- 不涉足让用户的生活变得更糟糕的领域，比如游戏、虚拟社交。
+- 工作和生活要平衡。
+- 企业除了盈利，还要对员工有责任，要关心他们的发展，而不只是压榨他们。
+
+
+## 6.5 我属于何处?
+
+## 6.6 我该在 SAP Jam 做出什么贡献？
+
+1. 营造团队良好的技术氛围，分享知识。
+
+2. Take project *profile service* from vancouver team.
+
+2. 应用层的数据库优化。我目前还没有能力在架构层做事情，那么我就把应用层的烂代码找出来，联系作者，和他一起优化。
+
+
+> You can profile pretty much anything that consumes time, and this includes your ap- plication. In fact, profiling your application is generally easier than profiling your database server, and much more rewarding. Although we’ve started by showing a pro- file of a MySQL server’s queries for the purposes of illustration, it’s better to try to measure and profile from the top down. the system from the user to the servers and back. It’s often true that the database server is to blame for performance problems, but it’s the application’s fault at least as often. Bottlenecks can also be caused by any of the following:
+
+> - External resources, such as calls to web services or search engines
+> - Operations that require processing large amounts of data in the application, such as parsing big XML files
+> - Expensive operations in tight loops, such as abusing regular expressions
+> - Badly optimized algorithms, such as naïve search algorithms to find items in lists
+
+> Fortunately, it’s easy to figure out whether MySQL is the problem. You just need an application profiling tool. (As a bonus, once you have it in place, it can help developers write efficient code from the start.)
+> 
+> From: High Performance MySQL P75.
 
 
 # 教会
