--- a/_posts/2016-11-22-plan-for-2017.md
+++ b/_posts/2016-11-22-plan-for-2017.md
@@ -1,5 +1,5 @@
 ---
-title: "安息，2017"
+title: "安息两年"
 layout: post
 guid: PdIwc8vdosDvCfRG
 date: 2016-11-22 10:03:26
@@ -7,7 +7,31 @@ tags:
   - 
 ---
 
-这是 life plan, 不再是 study plan.
+执行期：2016-11-01 至  2018-11-01
+
+两年前我比较喜欢 Google 的 [OKR(Objectives and Key Results)](https://rework.withgoogle.com/guides/set-goals-with-okrs/steps/introduction/) 来管理目标：
+
+
+- Objectives are ambitious and may feel somewhat uncomfortable
+Key results are measurable and should be easy to grade with a number (Google uses a scale of 0 – 1.0)
+
+- OKRs are public so that everyone in the organization can see what others are working on
+
+- The “sweet spot” for an OKR grade is 60% – 70%; if someone consistently fully attains their objectives, their OKRs aren’t ambitious enough and they need to think bigger
+
+- Low grades should be viewed as data to help refine the next OKRs
+
+- OKRs are not synonymous with employee evaluations
+
+- OKRs are not a shared to-do list
+
+
+在 OKR 中，100% 完成，说明目标太简单；40%完成，说明目标太难，不可执行；60%-70% 一个理想得分。这比较适合公司对员工目标的管理，因为符合 [SMART](https://en.wikipedia.org/wiki/SMART_criteria) 原则，目标更可控，可以看到产出。
+
+**我近来的想法是：个人目标应该充满"张力"，更大胆、更激进、充满想象力，要足够吓自己一跳。所以 40% 是一个理想的完成度。**
+
+
+以下是我的 life plan, 不再是 study plan.
 
 
 # 个人
@@ -171,7 +195,7 @@ tags:
 
 # 教会
 
-
+还没想好。
 
 ## Reference
 
@@ -181,3 +205,4 @@ tags:
 4. [The Little Schemer](https://book.douban.com/subject/1632977/)
 5. [Structure and Interpretation of Computer Programs](https://book.douban.com/subject/1148282/)
 6. [High Performance MySQL](https://book.douban.com/subject/1495763/)
+
