--- a/_posts/2016-11-22-plan-for-2017.md
+++ b/_posts/2016-11-22-plan-for-2017.md
@@ -9,6 +9,7 @@ tags:
 
 执行期：2016-11-01 至  2018-11-01
 
+
 两年前我比较喜欢 Google 的 [OKR(Objectives and Key Results)](https://rework.withgoogle.com/guides/set-goals-with-okrs/steps/introduction/) 来管理目标：
 
 
@@ -34,7 +35,11 @@ Key results are measurable and should be easy to grade with a number (Google use
 以下是我的 life plan, 不再是 study plan.
 
 
+
+
 # 个人
+
+
 
 ## 1. 神希望我今年干什么呢？
 
@@ -43,7 +48,13 @@ Key results are measurable and should be easy to grade with a number (Google use
 学习安息，学习休息。
 
 
-## 2. 更了解自己身体
+## 2. 继续缩减自己的社交生活
+
+只见挚友，少会客。
+
+
+
+## 3. 更了解自己身体
 
 储备康复医学的知识，而不是每每受伤之后，再去弥补。要搞懂几个问题：
 
@@ -57,7 +68,7 @@ Key results are measurable and should be easy to grade with a number (Google use
 
 
 
-## 学会安息
+## 4. 学会安息
 
 工作就是生活，生活就是工作。我喜欢工作，从未把他们分开过。这半年身体急转直下，先是颈椎痛，其次是背部的筋膜炎，疼痛的让我呕吐。这才意识到健康也是有限资源。我想休息，又不会休息。
 
@@ -93,35 +104,42 @@ Key results are measurable and should be easy to grade with a number (Google use
 希望在未来的一年，能找到自己的安息的方式。
 
 
-## 3. 开始写第一本书《暗记》，并完成以下章节的书稿
+## 5. 开始写第一本书《暗记》，并完成以下章节的书稿
 
-3.1 主动学习与被动学习
+```
 
-3.2 test effect
+1 主动学习与被动学习
 
-3.3 大脑的特点
+2 test effect
+
+3 大脑的特点
 
 - be slack，总是爱偷懒
 - 爱形象和具体，不爱抽象
 - ...
 
-3.4 Anki 软件的特点
+4 Anki 软件的特点
 
-3.5 Anki 的常用插件
+5 Anki 的常用插件
 
-3.6 整理卡片必须遵循的一些原则
+6 整理卡片必须遵循的一些原则
 
-3.4 应用案例
+4 应用案例
 
 如何用记忆医学解剖图谱？
 
 如何背单词，参考资料为《Influent Forever》
 
 如何练习演讲？
+....
 
-...
+```
 
-## 4. 读书
+
+
+
+
+## 6. 读书
 
 - *Introduction to Algorithms*
 - *K&R: The C programming language*
@@ -133,7 +151,11 @@ Key results are measurable and should be easy to grade with a number (Google use
 如何量化结果？
 
 1. 只要完成任意一本，该项就算 100% 完成
+
 2. 每本书的完成度相加，超过 100% 也算完成
+
+
+
 
 
 # 5. 家庭
@@ -143,9 +165,16 @@ Key results are measurable and should be easy to grade with a number (Google use
 2. 如何教育小沐沐？晚上一起看巧虎动画片，教他唱里面的儿歌和跳舞。
 
 
+
+
+
+
+
+
 # 6. 职场
 
 德鲁克是管理大师，也是基督徒。重读他的《管理自己》，再一次回答德鲁克的这些问题。
+
 
 ## 6.1 我的长处是什么？
 
@@ -160,11 +189,22 @@ Key results are measurable and should be easy to grade with a number (Google use
 
 ## 6.3 我如何学习？
 
+> 我认识一位公司总经理，他把一个平庸的小家族企业发展成行业领军企业。他是一个通过讲话学习的人。他习惯于每周一次把全体高层管理人员召集到他的办公室，随后对他们讲上两三个小时。他总是提出政策性问题，在每一个问题上提出三种不同观点。但他很少请这帮同事发表意见或提出问题，他只需要听众听他讲话。这就是他的学习方式。虽然他是一个比较极端的例子，但是通过讲话学习绝不是一种少见的方法。成功的出庭律师也以同样的方式学习，许多诊断医师也是如此（我自己也是这样）。 
+> 
+> - 德鲁克《管理自己》
+
+我的经理 Eric 就是这种类型，他通过开会学习。作为下属，和他一起开会大部分时间都是听他在陈述。他会边开会，边思考，有时得出结论。
+
+我不喜欢和别人讨论问题。首先，你很难找到一个旗鼓相当的讨论对象，或者是大师级的人物。其次，即使找到这类人，他可能不是你的菜。两个人的领域完全没有吻合。
+
+这就决定了投资回报比很低，花费的时间和获得的高质量的信息不成正比。
+
+
 ## 6.4 我的价值观是什么？
 
 - 不为钱做事情。
 - 不做昙花一现的东西。
-- 不跟随那些为钱做事情的领导。
+- 不跟随那些只为钱做事情的领导。
 - 不涉足让用户的生活变得更糟糕的领域，比如游戏、虚拟社交。
 - 工作和生活要平衡。
 - 企业除了盈利，还要对员工有责任，要关心他们的发展，而不只是压榨他们。
@@ -193,9 +233,37 @@ Key results are measurable and should be easy to grade with a number (Google use
 > From: High Performance MySQL P75.
 
 
-# 教会
 
-还没想好。
+
+# 7. 教会 （再想想）
+
+
+## 7.1 每周六下午三点，继续委身于 [EQUIP Leadership](http://www.iequip.org/about/mission-and-vision/) 课程
+
+
+## 7.2 寻找门徒
+
+- 他最好觉得我的知识是他所需要的。(required)
+
+- 他最好是终生学习者，不需要督促。 (required)
+
+- 他最好是个弟兄，避免我们彼此受到试探。 (optional)
+
+- 他愿意告诉老师实践后的反馈。 (optional)
+
+
+
+## 7.3 写使人受益的文章
+
+
+
+## 7.4 观察小组内每个人的个性，帮助他们找到合适的 "岗位"。
+
+教会是理想的实验室，做事情没有物质奖励。服侍的过程就是探索自我的过程，尝试的越多，越深刻认识自己恩赐。
+
+我也不再勉强自己做不擅长的事情。总有人心情不好需要安慰，总有婚姻岌岌可危，总有人在脱离正确的路，总有人被声色犬马诱惑。万事都在他手上，我只管做好自己该做的，不要操太多心，总是心怀负罪感。
+
+
 
 ## Reference
 
@@ -205,4 +273,4 @@ Key results are measurable and should be easy to grade with a number (Google use
 4. [The Little Schemer](https://book.douban.com/subject/1632977/)
 5. [Structure and Interpretation of Computer Programs](https://book.douban.com/subject/1148282/)
 6. [High Performance MySQL](https://book.douban.com/subject/1495763/)
-
+7. [德鲁克：管理自己](https://www.douban.com/group/topic/20159977/)
