--- a/_posts/2016-11-22-plan-for-2017.md
+++ b/_posts/2016-11-22-plan-for-2017.md
@@ -238,16 +238,20 @@ Key results are measurable and should be easy to grade with a number (Google use
 # 7. 教会 （再想想）
 
 
-## 7.1 每周六下午三点，继续委身于 [EQUIP Leadership](http://www.iequip.org/about/mission-and-vision/) 课程
+## 7.1 EQUIP Leadership 培训
+
+每周六下午三点，继续委身于 [EQUIP Leadership](http://www.iequip.org/about/mission-and-vision/) 课程
 
 
-## 7.2 寻找门徒
+## 7.2 寻找一个门徒
 
-- 他最好觉得我的知识是他所需要的。(required)
+- 他觉得我的知识是他急需的。(required)
 
-- 他最好是终生学习者，不需要督促。 (required)
+- 他是终生学习者，不需要督促。 (required)
 
 - 他最好是个弟兄，避免我们彼此受到试探。 (optional)
+
+- 他最好是低合群的。(optional)
 
 - 他愿意告诉老师实践后的反馈。 (optional)
 
