--- a/_posts/2016-11-22-plan-for-2017.md
+++ b/_posts/2016-11-22-plan-for-2017.md
@@ -7,11 +7,7 @@ tags:
   - 
 ---
 
-执行期：2016-11-01 至  2018-11-01
-
-
-两年前我比较喜欢 Google 的 [OKR(Objectives and Key Results)](https://rework.withgoogle.com/guides/set-goals-with-okrs/steps/introduction/) 来管理目标：
-
+前两年我比较喜欢 Google 的 [OKR(Objectives and Key Results)](https://rework.withgoogle.com/guides/set-goals-with-okrs/steps/introduction/) 来设定目标：
 
 - Objectives are ambitious and may feel somewhat uncomfortable
 Key results are measurable and should be easy to grade with a number (Google uses a scale of 0 – 1.0)
@@ -27,84 +23,55 @@ Key results are measurable and should be easy to grade with a number (Google use
 - OKRs are not a shared to-do list
 
 
-在 OKR 中，100% 完成，说明目标太简单；40%完成，说明目标太难，不可执行；60%-70% 一个理想得分。这比较适合公司对员工目标的管理，因为符合 [SMART](https://en.wikipedia.org/wiki/SMART_criteria) 原则，目标更可控，可以看到产出。
+在 OKR 中，100% 完成是糟糕的，说明当初目标太简单；40% 的完成也是糟糕的，说明目标太难，不可执行；60%-70% 恰到好处。OKR 比较适合公司对员工目标的管理，因为符合 [SMART](https://en.wikipedia.org/wiki/SMART_criteria) 原则，目标可控，管理者可以看到产出。
 
-**我近来的想法是：个人目标应该充满"张力"，更大胆、更激进、充满想象力，要足够吓自己一跳。所以 40% 是一个理想的完成度。**
+**我最近的的想法是：个人目标应有"张力"，更大胆、更激进、充满想象力，要足够吓自己一跳。所以 40% 是一个理想的完成度。**
 
-
-以下是我的 life plan, 不再是 study plan.
-
+以下是未来两年的人生计划。 
 
 
-
-# 个人
-
+# 1. 个人
 
 
-## 1. 神希望我今年干什么呢？
+## 1.1 操练从神而来的安全感
 
-不断操练在耶稣那里获得安全感，而不是知识和成就。
-
-学习安息，学习休息。
+手艺人不愁没饭吃，过去的安全感来自知识和能力。未来两年，我要不断操练在耶稣那里获得安全感。要准备好伴随而来的碌碌为为，甘为平庸。
 
 
-## 2. 继续缩减自己的社交生活
+## 1.2 继续缩减自己的社交生活
 
 只见挚友，少会客。
 
+## 1.3 了解身体
+
+要搞懂几个问题：
+
+1. 跑步和游泳容易损伤哪些肌肉和韧带? 这些肌肉和韧带的解剖结构，起点、终点、疼痛特点。
+
+2. 自己颈椎病的特点，如何康复。
+
+3. 把《精准拉伸》读完，学习有效拉伸。
+
+4. 学会交替训练。比如说游泳与跑步，散步，拉伸之间按照什么节奏来是比较适合身体的？
+
+储备康复医学的知识，而不是每每受伤之后，再去弥补，
+
+## 1.4 学会安息
+
+工作(学习）就是生活，生活就是工作。过去3年，我都在和身体讨价还价，好了伤疤忘了痛。这半年身体急转直下，膝盖积液持续了3个月，颈椎病，然后背部的筋膜炎疼痛的让我呕吐。
+
+生命真的好脆弱，过去的斗志昂扬瞬间烟消云散。我想休息，又不会休息，不工作时该干什么呢？要满足以下几个条件真是太难了：花时间、不虚度、有所成长、神所喜悦、身体放松、不再伏案。
+
+不如在行动中思考吧，目前能做到的：
+
+1. 在家。克制工作和学习的冲动；不看邮件；不看手机(含仰卧和俯卧)；主手机只保留 Anki。
+
+2. 工作。每工作一小时，休息15分钟；休息时的背部筋膜放松必不可少；每晚 22:30 睡觉，不熬夜。
+
+3. 地铁上不看手机，只是默想；走路不要低头，抬头挺胸；等儿子长大一点，晚上回家和他踢足球，玩台球、练琴、皮划艇；太太有空时和她一起散步。
 
 
-## 3. 更了解自己身体
-
-储备康复医学的知识，而不是每每受伤之后，再去弥补。要搞懂几个问题：
-
-1. 久坐、跑步容易损伤哪些肌肉和韧带? 
-
-2. 这些肌肉和韧带的解剖结构，起点、终点、疼痛特点
-
-3. 如何有效拉伸？把《精准拉伸》读完。
-
-4. 还要学会如何交替训练？比如说游泳与跑步，散步，拉伸之间按照什么节奏来是比较适合身体的？
-
-
-
-## 4. 学会安息
-
-工作就是生活，生活就是工作。我喜欢工作，从未把他们分开过。这半年身体急转直下，先是颈椎痛，其次是背部的筋膜炎，疼痛的让我呕吐。这才意识到健康也是有限资源。我想休息，又不会休息。
-
-不工作时该干什么呢？要满足以下几个条件真是太难了：花时间、不浪费、有所成长、神所喜悦、身体放松、不再伏案。
-
-在家时克制工作和学习的冲动
-
-- 不看邮件。
-
-- 不躺在床上看手机，含仰卧和俯卧。
-
-- 主手机只保留
-
-
-工作
-
-- 每工作一小时，要休息15分钟。
-
-- 休息时的背部筋膜放松必不可少
-
-- 每晚 22:30 睡觉，不熬夜
-
-其他
-
-- 地铁上不看手机，只是默想。
-
-- 走路不要低头，抬头挺胸。
-
-- 等儿子长大一点，晚上回家和他踢足球，玩台球，练琴，皮划艇
-
-- 和刘小坤一起散步，如果她愿意的话。
-
-希望在未来的一年，能找到自己的安息的方式。
-
-
-## 5. 开始写第一本书《暗记》，并完成以下章节的书稿
+## 1.5 开始写第一本书《暗记》，并完成以下章节的书稿
 
 ```
 
@@ -135,11 +102,7 @@ Key results are measurable and should be easy to grade with a number (Google use
 
 ```
 
-
-
-
-
-## 6. 读书
+## 1.6 读书计划
 
 - *Introduction to Algorithms*
 - *K&R: The C programming language*
@@ -147,72 +110,65 @@ Key results are measurable and should be easy to grade with a number (Google use
 - *Structure and Interpretation of Computer Programs*
 - *High Performance MySQL*, reread it and practice on Jam Production Environment
 
-
-如何量化结果？
-
-1. 只要完成任意一本，该项就算 100% 完成
-
-2. 每本书的完成度相加，超过 100% 也算完成
+只要完成任意一本，就算 100% 完成。(每本书的完成度相加，超过 100% 也算完成)
 
 
+# 2. 家庭
 
+1. 太太想买一套房子。我要开始打理家里的财务，并且学习房产知识。
 
-
-# 5. 家庭
-
-1. 想买一套房子，所以我要开始打理家里的财务，并且学习房产知识。
-
-2. 如何教育小沐沐？晚上一起看巧虎动画片，教他唱里面的儿歌和跳舞。
+2. 教育小沐沐。晚上一起看巧虎动画片，教他唱里面的儿歌和跳舞。
 
 
 
-
-
-
-
-
-# 6. 职场
+# 3. 职场
 
 德鲁克是管理大师，也是基督徒。重读他的《管理自己》，再一次回答德鲁克的这些问题。
 
 
-## 6.1 我的长处是什么？
+## 3.1 我的长处是什么？
 
-## 6.2 我的工作方式是怎样的？
+TODO
 
-- 独狼，不喜欢合作。（但喜欢和大师合作，做他们的小跟班）。
+## 3.2 我的工作方式是怎样的？
+
+- 独狼，不喜欢合作。（但喜欢做大师的徒弟，做他们的副手）。
 
 - 喜欢大段的工作时间，极其讨厌被人打断。
 
-- 厌恶管理。对人冷漠，不太关心这些事情。谁生病了？谁请假了？谁心情不好了？谁对未来迷茫了？谁需要沟通了？
+- 喜欢有私人空间且安静的工作环境。
+
+- 不愿意碰和管理相关的事情，且对人冷漠。"谁生病了？谁请假了？谁心情不好了？谁对未来迷茫了？谁需要沟通了？"这类邮件统统进入了我的垃圾箱。
 
 
-## 6.3 我如何学习？
+## 3.3 我如何学习？
 
-> 我认识一位公司总经理，他把一个平庸的小家族企业发展成行业领军企业。他是一个通过讲话学习的人。他习惯于每周一次把全体高层管理人员召集到他的办公室，随后对他们讲上两三个小时。他总是提出政策性问题，在每一个问题上提出三种不同观点。但他很少请这帮同事发表意见或提出问题，他只需要听众听他讲话。这就是他的学习方式。虽然他是一个比较极端的例子，但是通过讲话学习绝不是一种少见的方法。成功的出庭律师也以同样的方式学习，许多诊断医师也是如此（我自己也是这样）。 
-> 
-> - 德鲁克《管理自己》
+先独立思考问题，然后找专家验证答案，多数问题通过这种方式解决。
 
-我的经理 Eric 就是这种类型，他通过开会学习。作为下属，和他一起开会大部分时间都是听他在陈述。他会边开会，边思考，有时得出结论。
+我不愿花费太多时间讨论问题。随着对自己专业的深耕细作，问题越来越深入，很难找到同侪讨论问题。即使找到充满热情的同侪，两个人的专业未必吻合。这就决定了投资回报比很低，大部分时间花费在描述问题上，而不是探讨。
 
-我不喜欢和别人讨论问题。首先，你很难找到一个旗鼓相当的讨论对象，或者是大师级的人物。其次，即使找到这类人，他可能不是你的菜。两个人的领域完全没有吻合。
+这种学习方式的缺点
 
-这就决定了投资回报比很低，花费的时间和获得的高质量的信息不成正比。
+TODO
+
+我在未来一年如何改进
 
 
-## 6.4 我的价值观是什么？
+## 3.4 我的价值观是什么？
 
-- 不为钱做事情。
+- 已吃饱穿暖，不为钱做事情。
 - 不做昙花一现的东西。
 - 不跟随那些只为钱做事情的领导。
-- 不涉足让用户的生活变得更糟糕的领域，比如游戏、虚拟社交。
+- 不涉足让用户变得不道德、沉迷、放纵、虚度光阴的领域，比如约炮、游戏、虚拟社交。
 - 工作和生活要平衡。
 - 企业除了盈利，还要对员工有责任，要关心他们的发展，而不只是压榨他们。
 
 
-## 6.5 我属于何处?
+## 3.5 我属于何处?
 
-## 6.6 我该在 SAP Jam 做出什么贡献？
+TODO
+
+## 3.6 我该在 SAP Jam 做出什么贡献？
 
 1. 营造团队良好的技术氛围，分享知识。
 
@@ -235,37 +191,43 @@ Key results are measurable and should be easy to grade with a number (Google use
 
 
 
-# 7. 教会 （再想想）
+# 4. 教会
 
 
-## 7.1 EQUIP Leadership 培训
+## 4.1 继续参加 EQUIP Leadership 培训
 
-每周六下午三点，继续委身于 [EQUIP Leadership](http://www.iequip.org/about/mission-and-vision/) 课程
+每周六下午三点继续委身于 Bruce 的[EQUIP Leadership](http://www.iequip.org/about/mission-and-vision/) 课程。不迟到，不翘课。
 
+## 4.2 寻找门徒
 
-## 7.2 寻找一个门徒
+Bruce 花了两年时间装备我，我也有责任去装备年幼的，我要找1-2个提摩太。
 
-- 他觉得我的知识是他急需的。(required)
+- 他一定要觉得我的知识对他有用。(required)
 
-- 他是终生学习者，不需要督促。 (required)
+- 他是终生学习者，自律，不需要督促。(required)
 
-- 他最好是个弟兄，避免我们彼此受到试探。 (optional)
+- 他初入职场，需要指导。(optional)
 
-- 他最好是低合群的。(optional)
+- 他最好是个弟兄，避免彼此受到试探。(optional)
 
-- 他愿意告诉老师实践后的反馈。 (optional)
+- 他愿意告诉我实践后的反馈。(optional)
 
-
-
-## 7.3 写使人受益的文章
-
+我们定期 skype (或线下) 来讨论生活、学习、工作中遇到的各种各样的问题。
 
 
-## 7.4 观察小组内每个人的个性，帮助他们找到合适的 "岗位"。
+## 4.3 写使人受益的文章
 
-教会是理想的实验室，做事情没有物质奖励。服侍的过程就是探索自我的过程，尝试的越多，越深刻认识自己恩赐。
+TODO
 
-我也不再勉强自己做不擅长的事情。总有人心情不好需要安慰，总有婚姻岌岌可危，总有人在脱离正确的路，总有人被声色犬马诱惑。万事都在他手上，我只管做好自己该做的，不要操太多心，总是心怀负罪感。
+## 4.4 观察小组内每个人的个性，帮助他们找到小组内合适的 "岗位"。
+
+教会是理想的人生实验室，做事不拿工资，领袖都是仆人。时而遭受非议，时而殚精竭虑。没有夸赞，少了认可。所有的外部动机都被挪去，还能坚持下去吗？
+
+我已找到自己喜欢做的事情，希望小组里的每个人也能找到自己的"恩赐"。 
+
+
+
+与神立约至2018年末。
 
 
 
